Fix z-index issues

--- a/app/assets/stylesheets/modules/landing.css.scss
+++ b/app/assets/stylesheets/modules/landing.css.scss
@@ -9,7 +9,7 @@
   height: 100%;
   background: #246 asset-url('africa-green-line.jpg') no-repeat 0 0;
   background-size: cover;
-  z-index: 10000;
+  z-index: 100;
   background
 
   .toolbar {
